<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/bgColor"
    tools:context="pl.kacperhes.mathy.DeltaActivity">

    <TextView
        android:id="@+id/equation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delta_equation"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorDark"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearLayoutDelta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/equation"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/deltaA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/delta_a"/>

        <EditText
            android:id="@+id/deltaB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/delta_b"/>

        <EditText
            android:id="@+id/deltaC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/delta_c"/>

    </LinearLayout>

    <Button
        android:id="@+id/deltaSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutDelta"
        android:gravity="center"
        android:text="@string/count_button"
        android:textSize="20sp"
        android:textColor="@color/bgColor"
        android:background="@color/colorPrimary"
        android:onClick="countDelta"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deltaSubmit"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/deltaSolutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"/>
    </ScrollView>


</RelativeLayout>
